# clipboard_saver

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.claude/skills/release-flow/: SKILL.md
.github/workflows/: ci.yml  release.yml
scripts/: gen-icons.py  install.sh  package.sh
src/: history.rs  main.rs  menu.rs  storage.rs  updater.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: autostart.rs  history.rs  item.rs  main.rs  panel.rs  storage.rs  updater.rs  watcher.rs
ui/: app.js  index.html  styles.css
