[package]
name = "clipboard_saver"
version = "0.1.0"
edition = "2021"
description = "Clipboard history manager that lives in the macOS menu bar"
license = "MIT"

[dependencies]
tray-icon = "0.24"
tao = "0.35"
arboard = { version = "3.6", features = ["image-data"] }
objc2 = "0.6"
objc2-app-kit = "0.3"
image = { version = "0.25", default-features = false, features = ["png"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"

[package.metadata.bundle]
name = "Clipboard Saver"
identifier = "com.luiss0606.clipboard-saver"
copyright = "Copyright (c) 2026 Luis Huingo"
category = "public.app-category.utilities"
short_description = "Clipboard history in your menu bar"
osx_minimum_system_version = "12.0"
